# crane_x7_ros

./: README.md
crane_x7_control/config/: crane_x7_control.yaml
crane_x7_description/urdf/: camera.urdf
crane_x7_examples/: CMakeLists.txt  package.xml  test.txt
crane_x7_examples/launch/: openCV.launch
crane_x7_examples/scripts/: camera.cpp  camera_depth.cpp  camera_pub.cpp  camera_sta.cpp  camera_sub.cpp  control_effort_gripper.py  crane_x7_pick_and_place_demo.py  realsense_camera.py  red_only_camera.cpp  set_angles.py
crane_x7_moveit_config/config/: .crane_x7.srdf.swo  crane_x7.srdf
crane_x7_moveit_config/launch/: moveit.rviz
robot_design3/: CMakeLists.txt  package.xml
robot_design3/src/: explore_move.py  opencv.cpp  pick_up_move.py
